# CLearning

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DIARY.md  DOCUMENTATION.md  Makefile  README.md  ROADMAP.md
common/: CMakeLists.txt  Makefile  README.md  cba2.h  cxtUi2.h  generalData.h  lookForRootFiles.c  lookForRootFiles.h  map.c  map.h  screenManagment.c  screenManagment.h  stringManipulation.c  stringManipulation.h  txtFunctions2.h  writeFile2.h
common/configs/: cba.config
projects/cba/: CMakeLists.txt  README.md  cba.c  cba.h  main.c  ui.c  ui.h
projects/cl/: CMakeLists.txt  README.md  cba.h  cl.c  cl.h  cxt.h  generalData.h  main.c  map.h  packageManager.c  txtFunctions2.h
projects/cxt/: CMakeLists.txt  Makefile  README.md  generalData.h  main.c  readFile.c  readFile.h  txtFunctions.c  txtFunctions.h  ui.c  ui.h  writeFile.c  writeFile.h
projects/hub/: CMakeLists.txt  README.md  hub.c  hub.h  main.c  ui.c  ui.h
